<resources>
    <string name="app_name">Triqui</string>
    <string name="un_jugador">1 jugador</string>
    <string name="dos_jugadores">2 jugadores</string>
    <string name="facil">Fácil</string>
    <string name="normal">Normal</string>
    <string name="imposible">Imposible</string>
    <string name="casilla">casilla</string>
    <string name="circulos_ganan">Círculos Ganan!</string>
    <string name="aspas_ganan">Aspas ganan!</string>
    <string name="empate">Empate!</string>
</resources>
