<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:orientation="horizontal"
    android:background="@drawable/fondo"
    android:padding="@dimen/padding_pantalla"
    tools:context="com.castano.erwin.ejerciciotresenraya.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloTextView"
                style="@style/titulo"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/unJugadorButton"
                style="@style/boton"
                android:text="@string/un_jugador" />

            <RadioGroup
                android:id="@+id/configDificultadRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/facilRadioButton"
                    style="@style/radio"
                    android:checked="true"
                    android:text="@string/facil" />

                <RadioButton
                    android:id="@+id/normalRadioButton"
                    style="@style/radio"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/imposibleRadioButton"
                    style="@style/radio"
                    android:text="@string/imposible" />


            </RadioGroup>


            <Button
                android:id="@+id/dosJugadoresButton"
                style="@style/boton"
                android:text="@string/dos_jugadores" />


        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:columnCount="3"
            android:foregroundGravity="center_vertical"
            android:rowCount="3">

            <ImageView
                android:id="@+id/a1"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/a2"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/a3"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/b1"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/b2"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/b3"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/c1"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/c2"
                style="@style/casilla" />

            <ImageView
                android:id="@+id/c3"
                style="@style/casilla"
                />


        </GridLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
